// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`div bar layout with child width 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
      "display": "table",
      "tableLayout": "auto",
      "verticalAlign": undefined,
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 0,
        "verticalAlign": "middle",
        "width": 100,
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 10,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 10,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`div bar layout with multiple child width 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
      "display": "table",
      "tableLayout": "auto",
      "verticalAlign": undefined,
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 0,
        "verticalAlign": "middle",
        "width": "10px",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div
        style={
          Object {
            "width": "10px",
          }
        }
      />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 10,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 10,
        "verticalAlign": "middle",
        "width": "20px",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div
        style={
          Object {
            "width": "20px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`div bar layout with numeric spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
      "display": "table",
      "tableLayout": "auto",
      "verticalAlign": undefined,
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 0,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 10,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 10,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`div bar layout with string multi-spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
      "display": "table",
      "tableLayout": "auto",
      "verticalAlign": undefined,
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": 0,
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": "20px",
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "boxSizing": "content-box",
        "display": "table-cell",
        "paddingLeft": "20px",
        "verticalAlign": "middle",
        "width": "auto",
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`div grid layout with numeric spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingLeft": 1,
        "paddingTop": 1,
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "marginLeft": "-11px",
          "marginTop": "-11px",
        }
      }
    >
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": 10,
            "marginTop": 10,
            "width": "auto",
          }
        }
      >
        <div />
      </div>
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": 10,
            "marginTop": 10,
            "width": "auto",
          }
        }
      >
        <div />
      </div>
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": 10,
            "marginTop": 10,
            "width": "auto",
          }
        }
      >
        <div />
      </div>
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "clear": "both",
        "display": "table",
      }
    }
  />
</div>
`;

exports[`div grid layout with string multi-spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingLeft": 1,
        "paddingTop": 1,
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "marginLeft": "-21px",
          "marginTop": "-11px",
        }
      }
    >
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": "20px",
            "marginTop": "10px",
            "width": "auto",
          }
        }
      >
        <div />
      </div>
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": "20px",
            "marginTop": "10px",
            "width": "auto",
          }
        }
      >
        <div />
      </div>
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": "20px",
            "marginTop": "10px",
            "width": "auto",
          }
        }
      >
        <div />
      </div>
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "clear": "both",
        "display": "table",
      }
    }
  />
</div>
`;

exports[`div grid layout with string spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingLeft": 1,
        "paddingTop": 1,
      }
    }
  >
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "marginLeft": "-11px",
          "marginTop": "-11px",
        }
      }
    >
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": "10px",
            "marginTop": "10px",
            "width": "auto",
          }
        }
      >
        <div />
      </div>
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": "10px",
            "marginTop": "10px",
            "width": "auto",
          }
        }
      >
        <div />
      </div>
      <div
        className=" e0 e1 e2 e3 e4"
        style={
          Object {
            "float": "left",
            "marginLeft": "10px",
            "marginTop": "10px",
            "width": "auto",
          }
        }
      >
        <div />
      </div>
    </div>
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "clear": "both",
        "display": "table",
      }
    }
  />
</div>
`;

exports[`div no layout 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <p>
    Hello
  </p>
  <p>
    World!
  </p>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "clear": "both",
        "display": "table",
      }
    }
  />
</div>
`;

exports[`div stack layout with numeric spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": 0,
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`div stack layout with string multi-spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": 0,
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`div stack layout with string spacing 1`] = `
<div
  className=" e0 e1 e2 e3 e4"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": 0,
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
  <div
    className=" e0 e1 e2 e3 e4"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div />
    <div
      className=" e0 e1 e2 e3 e4"
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;
